# ru-embassy-tutorial

./: .gitignore  README.md  main.typ  template.typ
examples/blinky/: Cargo.toml
examples/blinky/.cargo/: config.toml
examples/blinky/src/: main.rs
examples/rp-min/: Cargo.toml
examples/rp-min/.cargo/: config.toml
examples/rp-min/.helix/: languages.toml
examples/rp-min/src/: main.rs
examples/rp2040/: Cargo.toml
examples/rp2040/.cargo/: config.toml
examples/start/: Cargo.toml
examples/start/.zed/: settings.json
examples/start/src/: main.rs
examples/stm32f411ce/: Cargo.toml  adc_dma.long-type-1771023458279897013.txt
examples/stm32f411ce/.cargo/: config.toml
examples/vscode/: Cargo.toml
themes/: 1-intro.typ  2-project-structure.typ  3-GPIO-EXTI.typ
themes/tools/: zed.typ
