[package]
name = "start"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-stm32 = { version = "0.6.0", features = [
  "defmt",
  "stm32f411ce",
  "unstable-pac",
  "memory-x",
  "time-driver-any",
  "exti",
] }
embassy-executor = { version = "0.10.0", features = [
  "platform-cortex-m",
  "executor-thread",
  "defmt",
] }
embassy-time = { version = "0.5.1", features = [
  "defmt",
  "defmt-timestamp-uptime",
] }

defmt = "1.0.1"
defmt-rtt = "1.0.0"

cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"

panic-probe = { version = "1.0.0", features = ["print-defmt"] }

[profile.release]
debug = 2 # 2 - полная отладочная информация
